addons/shared_addons/themes/base/css/events.css
*/
/*General CSS, aplied for all the screens (mobile first)*/
home{
	background-color: #E5E4E3;
	background-image: linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);
	background-image: -o-linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);
	background-image: -moz-linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);
	background-image: -webkit-linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);
	background-image: -ms-linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);

	background-image: -webkit-gradient(
		linear,
		left bottom,
		left top,
		color-stop(0.31, rgb(186,165,186)),
		color-stop(0.66, rgb(229,229,227))
	);
}

body {
	font-family: Impact;
	color: #666578;
	height:auto;
	margin:0;
	
	background-image: linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);
	background-image: -o-linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);
	background-image: -moz-linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);
	background-image: -webkit-linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);
	background-image: -ms-linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);

	background-image: -webkit-gradient(
		linear,
		left bottom,
		left top,
		color-stop(0.31, rgb(186,165,186)),
		color-stop(0.66, rgb(229,229,227))
	);

}

body, button, input, select, textarea{
	color: #666578;
}
a{
	color: #666578;
}

a:hover{
	color: #C03D3C !important;
}

.event_red_text{
	font-family: inherit;
	color: #C03D3C;
}


/*Text selection*/
::selection {
	background: #999A87; /*#C03D3C; Safari */
	}
::-moz-selection {
	background: #999A87; /* Firefox */
}

.container {
	background-color:#E5E4E3;
	margin:0 auto;
	width:100%;
	height:auto;
	min-height: 800px;  /*min heigt needed when there are no event*/
}

a{
	text-decoration:none;
}

ul{
	padding:0;
	margin:0;
}


header{
	background-color:#E5E4E3;
	float:none;
	height:auto;
	text-align: center;
	padding: 0;
	border:0;
	width:100%;
	margin:0 auto;
}

#content{
	background-color:#E5E4E3;
	padding:0;
	width:90%;
	float:none;
	margin:0 auto;
	margin-top: 1.5%;
}

.admin_label{
	width:50px;
}

h1#event_site_logo{
	margin:0 0 1% 0;
	font-size: 3em;
}

#event_site_logo a{
	font-family: Impact;
	color: #676679;
	margin:0 0 0 0;
}

h2#event_site_slogan{
	margin:0;
	color: #676679;
	font-family: Georgia;
	font-size: 1.1em;
	line-height: 1.2em;
}

/* Submit event*/
.submit_form_container{
	height: 500px;
}
.submit_form_container ul{
	padding-left: 2%;
	list-style: none;
}

.submit_form_container h2{
	padding:2% 0 0 2%;
}
.submit_success_button{
	margin: 2% 0 0 2%;
}
/*Left menu (calendar)*/
.event_left_menu{
	display:none; /*FIXME hide months in mobile screen*/
}

#event_left_menu_months{
	list-style: none;
	text-align: right;
	font-size: 1.4em;
}
/**************************/
/* Right menu (navigation)*/
#ul_mobile_container{
	overflow: hidden;	
}

#ul_right_mobile{
	overflow: hidden;
	 text-align:center;
}

#ul_left_mobile{
 text-align:center;
	float: left;
	margin:0 auto;
}

.event_right_menu ul{   /*Right menu is placec before post_container to avoid problems with floats*/
	list-style: none;
	font-weight:bold;
	width:40%; /**/
}
.event_right_menu li{
	font-size: 1.2em;
	color: #666578;
	padding: 4% 2%;
	margin:auto;
}	



.event_post_container{
	background-color:  #E5E4E3;
	/*padding: 5px 15px 15px 15px;
	float:left;	
		display:inline-block;
		*/
	/*margin: 0 15px 15px 0;*/
	/*outline: 3px solid rgba(0, 0, 0, 0.03);*/
	/*border: 1px solid rgba(0, 0, 0, 1);*/
	/*width: 240px;*/
}

#twitter_logo{
	width:35px;
	height:29px;
}

#facebook_logo{
	width:22px;
	height:29px;
}

.li_horizontal{
	 display: inline;
	 list-style-type: none;
	 padding-right: 20px;
}

#SendButton{
	margin-bottom: 4%;
}

/*End of right menu*/


/*Your event page*/
.your_event_form ul{
	list-style: none;
}

.your_event_form li{
	margin: 2% 0% 0% 0%;
}
.your_event_form p{
	margin:0 0 0 1em;
}

.form_input_wrapper{
    overflow: hidden; /* add this to contain floated children */
}
.form_input{
	float:left;
}
.form_input .input{
/* 	width:50%; */
	height:2em;	
}

.form_error{
	float:left;
}

.event_form_button{
	font-family: Impact;

	width:100px;
	height:50px;
	margin-right: 2%;
	font-size: 1.1em;

}

.your_event_buttons{
	margin: 2% 0% 0% 0%;
}

/* FORMAT PLACEHOLDERS
input::-webkit-input-placeholder {
	font-size: 2em;
}
/ For Mozilla Firefox 
input:-moz-placeholder {
	font-size: 2em;
}
*/

/*End of YourEvent page */



/****   Event post   ****/
/************************/
.event_post_container{
	border-top-right-radius:30px;
	border-top-left-radius:30px;	
	
	-moz-box-shadow		: 0px -2px 12px #676679;
	-webkit-box-shadow	: 0px -2px 12px #676679;
	box-shadow			: 0px -2px 12px #676679;
}
.event_post_0{   /*First post*/
		
	border-top-right-radius:30px;
	border-top-left-radius:30px;	
	
/*
	-moz-box-shadow		: 0px -2px 12px #676679;
	-webkit-box-shadow	: 0px -2px 12px #676679;
	box-shadow			: 0px -2px 12px #676679;
*/
	
	/*filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=3,MakeShadow=true,ShadowOpacity=0.30);
	-ms-filter: "progid:DXImageTransform.Microsoft.Blur(PixelRadius=3,MakeShadow=true,ShadowOpacity=0.30)";
	zoom: 1;
	*/
}

.event_post{
	padding:0 0 2% 0;
	background: #ffffff;
	min-height: 65px;
	min-width: 350px;
}

.event_body{
	display: inline-block;
	font-size:100%;
    color: #666578;
	font-family: Georgia;
	padding: 2% 0 0 2%;
	margin-right: 2%;
	
}

.event_info{
	line-height: 1.3em;
	font-style: italic;
	padding:0 0 1% 2%;
}


.event_content{
	max-height: 70px;
	width:80%;
	overflow: hidden;
	padding:0;
	margin:0 auto;
/* 	margin:0 6% 0 6%; */
}



/*event_header*/
.event_date{
	padding:1% 0 0 2%;
	float:left;
	width:20% auto;
	display: inline-block;
	font-size:2.4em;
	font-weight: 500;
	vertical-align: middle;
	font-family: Impact;
	transform : scale(1,1.5);
	-webkit-transform:scale(1,1.5); /* Safari and Chrome */
	-moz-transform:scale(1,1.5); /* Firefox */
	-ms-transform:scale(1,1.5); /* IE 9+ */
	-o-transform:scale(1,1.5); /* Opera */
	margin-right:2%;
}

.event_title{
	width:auto;
	overflow: hidden;
	vertical-align:middle;
	/*Avoid third line in Event Title*/
	min-height:55px;
	max-height:55px;
	}

.event_title h3{
	overflow: hidden;
	display: block;
	margin:0 auto;
}

.event_title a{
	font-size:1.2em; /*1.4em*/
	font-family: Impact;
	color: #666578;
}

/*event_body*/
.event_info_list li{
	list-style: none;
	display: inline; 
	margin:0;
}


.info-tag{
	background: #ffffff;
}


#info-tag-time{
	font-weight: bold;
}

/*button to show more*/
.btn_show_content{
	position:relative;
	float:right;
	bottom:38px;
	right:3px;
}

#collapse_button{
	height:6px;
	width:35px;
}

#expand_button{
	height:35px;
	width:35px;

}

/****************************************************************************************/
/* START OF RESPONSIVE CODE:
Small tablet portrait 
@media only screen and (min-width: 641px) {

iPad portrait 
@media only screen and (min-width: 769px) {

Small browser / iPad landscape 
@media only screen and (min-width: 1025px) {

 Generic browser 
@media only screen and (min-width: 1281px) {

 Large browser 
@media only screen and (min-width: 1600px) {

/****************************************************************************************/





/*************************/
/* Small tablet portrait */
@media only screen and (min-width: 641px) {
	h1#event_site_logo{
		margin:0 0 1% 0;
		font-size: 4em;
	}
	
	/*Right menu mobile*/
	#ul_mobile_container{
/* 		overflow: hidden;	 */
	}
	
	#ul_right_mobile{
/* 		overflow: hidden; */
		 text-align:left;
		 width:100%;
	}
	
	#ul_left_mobile{
		 text-align:left;
/* 		float: left; */
/* 		margin:0 auto; */
	}

	.event_post_container{
		width:80%;	
	}
	.event_right_menu{
		width:18%;
		float:right;	
		margin:0 0 0 0;
		padding:0 0 0 0;
	}
	.event_right_menu ul{
		padding: 0;
		margin:0 auto;	
		width:auto;
	}
	.event_right_menu li{
		font-size: 1.2em;
		padding:0% 2% 5%; /*Change respect small size: text now alligned to left, */
	}
	.event_date{
		font-size:3em;
	}
	.event_title{  /*Avoid third line in Event Title*/
		min-height:70px;
		max-height:70px;
	}
	.event_title a{
		font-size:1.5em; /*1.4em*/
	}


/*****************/
/* iPad portrait */
@media only screen and (min-width: 769px) {
	h1#event_site_logo{
		font-size: 6em;
	}
	.event_post_container{
		width:80%;	
	}
	
	.event_right_menu{
		width:18%;
		float:right;	
		margin:0 0 0 0;
		padding:0 0 0 0;
	}
	.event_right_menu ul{
		padding: 0;
		margin:0 auto;	
	}
	.event_right_menu li{
		font-size: 1.4em;
	}
	
	.event_body{	
		display:block;
	}
	.event_date{
		font-size:3.6em;
	}
	.event_title{  /*Avoid third line in Event Title*/
		min-height:85px;
		max-height:85px;
	}
	.event_title a{
		font-size:1.8em; /*1.4em*/
	}

}


/**********************************/
/* Small browser / iPad landscape */
@media only screen and (min-width: 1025px) {

	h1#event_site_logo{
		font-size: 7em; /*5*/
	}
	.event_post_container{
		width:65%;	
		margin:0 auto;	
	}
	
	.event_date{
		font-size:4em;/* 2.7em; */
	}
	.event_right_menu{
		width:15%;
		float:right;	
		margin:0 0 0 0;
		padding:0 0 0 0;
	}
	.event_right_menu ul{
		padding: 0;
		margin:0 auto;	
	}
	.event_right_menu li{
		font-size: 1.4em;
		padding:0% 2% 5%; /*Change respect small size: text now alligned to left, */
		
	}

	/*Left menu*/
	.event_left_menu{
		padding: 0;
		width:15%;
		float:left;
		display:block;
		margin-right:0 auto;
	}
	
	/*Event post*/
	.event_body{	
		display:block;
	}
	.event_title{  /*Avoid third line in Event Title*/
		min-height:85px;
		max-height:85px;
	}


}



/* Generic browser */
@media only screen and (min-width: 1281px) {
	h1#event_site_logo{
		font-size: 9em;
	}
	
	.event_title{ /*Avoid third line in Event Title*/
		min-height:110px;
		max-height:110px;
	}
	
	.event_title h3 a{
		font-size: 2.4em;
	}
	
	.event_date{
		font-size:4.7em;
	}
	
	.event_header{
		min-height: 100px;
	}
	
	.event_post_container{
/* 		min-width: 800px; FIXME ANAAAA!!!! */
	}
}

/* Large browser */
@media only screen and (min-width: 1600px) {
	h1#event_site_logo{
		font-size: 20em;
	}
	
	.event_title{ /*Avoid third line in Event Title*/
/*
		min-height:110px;
		max-height:110px;
*/
	}

}

